# fsoft2025_1DB_5

Championship/: CMakeLists.txt  main.cpp
Championship/headers/controllers/: ChampionshipController.h
Championship/headers/model/: Cards.h  League.h  Match.h  Players.h  Referee.h  Stadium.h  Team.h
Championship/headers/views/: View.h
Championship/mock/: MockData.cpp  MockData.h
Championship/sources/controllers/: ChampionshipController.cpp
Championship/sources/model/: Cards.cpp  League.cpp  Match.cpp  Players.cpp  Referee.cpp  Stadium.cpp  Team.cpp
Championship/sources/views/: View.cpp
